--- a/AccountSetting/css/Style.css
+++ b/AccountSetting/css/Style.css
@@ -506,3 +506,17 @@ a:hover {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
 }
+.add 
+{
+    margin:0px;
+    padding:0px;
+    white-space:nowrap;
+    width:auto;
+    overflow:visible;
+    border:0;
+    background:transparent.
+}
+#addmember
+{
+    margin: 2%;
+}
